@@ -1,12 +1,11 @@
-package com.nesterrovv.reactivejava.statistics;
+package com.nesterrovv.reactivejava.statistics.parallel;
 
 import com.nesterrovv.reactivejava.model.Company;
 import com.nesterrovv.reactivejava.model.JobResponsibility;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiConsumer;
 import java.util.function.BinaryOperator;
 import java.util.function.Function;
@@ -14,26 +13,26 @@ import java.util.function.Supplier;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
-public class StatisticsCollector
+public class ParallelStatisticsCollector
         implements Collector<Company, Map<String, List<JobResponsibility>>, Map<String, Map<String, Double>>> {
 
     private static final double TO_PERCENTS = 100.0;
 
-    public static StatisticsCollector collect() {
-        return new StatisticsCollector();
+    public static ParallelStatisticsCollector collect() {
+        return new ParallelStatisticsCollector();
     }
 
     @Override
     public Supplier<Map<String, List<JobResponsibility>>> supplier() {
-        return HashMap<String, List<JobResponsibility>>::new;
+        return ConcurrentHashMap::new;
     }
 
     @Override
     public BiConsumer<Map<String, List<JobResponsibility>>, Company> accumulator() {
         return (map, company) -> {
-            List<JobResponsibility> jobResponsibilities = company.getOffices().stream()
-                    .flatMap(office -> office.getColleagues().stream())
-                    .flatMap(colleague -> colleague.getJobResponsibilities().stream())
+            List<JobResponsibility> jobResponsibilities = company.getOffices().parallelStream()
+                    .flatMap(office -> office.getColleagues().parallelStream())
+                    .flatMap(colleague -> colleague.getJobResponsibilities().parallelStream())
                     .collect(Collectors.toList());
 
             map.put(company.getTitle(), jobResponsibilities);
@@ -50,18 +49,18 @@ public class StatisticsCollector
 
     @Override
     public Function<Map<String, List<JobResponsibility>>, Map<String, Map<String, Double>>> finisher() {
-        return map -> map.entrySet().stream()
+        return map -> map.entrySet().parallelStream()
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
                         entry -> {
-                            var responsibilityCount = entry.getValue().stream()
+                            var responsibilityCount = entry.getValue().parallelStream()
                                     .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
 
-                            long totalResponsibilities = responsibilityCount.values().stream()
+                            long totalResponsibilities = responsibilityCount.values().parallelStream()
                                     .mapToLong(Long::longValue)
                                     .sum();
 
-                            return responsibilityCount.entrySet().stream()
+                            return responsibilityCount.entrySet().parallelStream()
                                     .collect(Collectors.toMap(
                                             frequencyEntry -> frequencyEntry.getKey().getTitle(),
                                             frequencyEntry -> (frequencyEntry.getValue() * TO_PERCENTS)
@@ -73,7 +72,7 @@ public class StatisticsCollector
 
     @Override
     public Set<Characteristics> characteristics() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
 }
